--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -1,41 +1,10 @@
 name: Integration
 
 # Controls when the workflow will run
-on:
-  pull_request:
-  push:
-    branches:
-      - main
-  schedule:
-    - cron: '0 */6 * * *' # Every 6 hours
-  workflow_dispatch:
-    inputs:
-      restateCommit:
-        description: 'restate commit'
-        required: false
-        default: ''
-        type: string
-      restateImage:
-        description: 'restate image, superseded by restate commit'
-        required: false
-        default: 'ghcr.io/restatedev/restate:main'
-        type: string
-  workflow_call:
-    inputs:
-      restateCommit:
-        description: 'restate commit'
-        required: false
-        default: ''
-        type: string
-      restateImage:
-        description: 'restate image, superseded by restate commit'
-        required: false
-        default: 'ghcr.io/restatedev/restate:main'
-        type: string
+on: [push, pull_request]
 
 jobs:
   sdk-test-suite:
-    if: github.repository_owner == 'restatedev'
     runs-on: ubuntu-latest
     name: "Features integration test (sdk-test-suite version ${{ matrix.sdk-test-suite }})"
     strategy:
